# society_management_system

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/authentication/: dependencies.py  models.py  repository.py  routes.py  schemas.py  security.py  services.py  strategies.py
backend/app/core/: cache.py  config.py  database.py  logging_config.py  logging_context.py
backend/app/domain/: payment.py  user.py
backend/app/payments/: models.py  schemas.py
backend/app/societies/: models.py  repository.py  routes.py  schemas.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 0cde9d334448_create_society_and_building_.py  694bb60d91d6_create_users_credentials_tokens_and_.py  6998d616ac99_add_role_column_to_users.py  9a7b738c642b_remove_building_fields.py
backend/tests/e2e/: __init__.py  test_auth_routes.py  test_societies_routes.py
backend/tests/unit/: __init__.py  test_repository.py  test_security.py  test_services.py  test_societies_repository.py  test_societies_services.py  test_strategies.py
diagrams/: c4_component_diagram.puml  c4_container_diagram.puml  c4_context_diagram.puml
