[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic==2.13.4",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "redis>=5.0.3",
    "google-auth>=2.28.2",
]
